--- a/src/setup.html
+++ b/src/setup.html
@@ -35,7 +35,7 @@
               <li>Shows time left until the meeting ends</li>
               <li>Changes icon color to orange when 5 minutes are left on the meeting</li>
               <li>Changes icon color to red when 30 seconds are left on the meeting and goes up to 5 minutes after the meeting</li>
-              <li>When past meeting time if the user pushes the button will search for the next meeting if one is available</li>
+              <li>When the meeting ends the counter will keep going and stay red for 5 minutes, if the user pushes the button it will show the next meeting if one is available</li>
               <li>Supports multiple concurrent meetings, to switch between meeting just push the button</li>
             </ul>
 
