--- a/src/setup.html
+++ b/src/setup.html
@@ -42,6 +42,12 @@
             <h4>Next Meeting</h4>
             <ul>
               <li>Shows time left until next meeting starts</li>
+              <li>If the button is pushed it will show the title of the next meeting
+                <ul>
+                  <li>If the button is pushed while the text is showing it will go back to show the time left until the next meeting</li>
+                  <li>At the end of the title animation, the button will go back to show the time left until the next meeting</li>
+                </ul>
+              </li>
               <li>Changes icon color to orange when there are 5 minutes left for the next meeting to start</li>
               <li>Changes icon color to red when there are 30 seconds left for the next meeting to start</li>
             </ul>
