feat: add excludeAllDay setting to filter out all-day events
- Add isAllDay property to CalendarEvent to detect all-day events
- Add excludeAllDay setting to GlobalSettings (default: true)
- Add checkbox in Settings UI to toggle all-day event filtering
- Update calendar-service to filter all-day events based on setting
- Add 3 tests for all-day event filtering functionality
- Total tests: 252

--- a/pi/setup.html
+++ b/pi/setup.html
@@ -30,6 +30,11 @@
         </div>
 
         <div class="sdpi-item">
+            <div class="sdpi-item-label">Exclude All-Day Events</div>
+            <input type="checkbox" id="excludeAllDay" class="sdpi-item-value" checked />
+        </div>
+
+        <div class="sdpi-item">
             <button class="sdpi-item-value" id="save">Save Settings</button>
             <button class="sdpi-item-value" id="refresh">Force Refresh &#128472;</button>
         </div>
