fix(ui): correct SDPI checkbox structure for excludeAllDay setting
- Use proper SDPI checkbox HTML structure with nested label and span
- Add type='checkbox' attribute to parent sdpi-item div
- Add null check for checkbox element before accessing .checked
- Ensures checkbox is visible and properly styled in Property Inspector

--- a/pi/setup.html
+++ b/pi/setup.html
@@ -29,9 +29,12 @@
             </select>
         </div>
 
-        <div class="sdpi-item">
+        <div class="sdpi-item" type="checkbox">
             <div class="sdpi-item-label">Exclude All-Day Events</div>
-            <input type="checkbox" id="excludeAllDay" class="sdpi-item-value" checked />
+            <div class="sdpi-item-value">
+                <input type="checkbox" id="excludeAllDay" checked>
+                <label for="excludeAllDay"><span></span>Hide all-day events</label>
+            </div>
         </div>
 
         <div class="sdpi-item">
