fix(actions): add explicit onKeyUp override for SDK event routing
The Stream Deck SDK requires onKeyUp to be explicitly defined in each
action class for key events to be routed properly - inheritance alone
is not sufficient.

- Add onKeyUp override to TimeLeftAction for meeting cycling
- Add onKeyUp override to NextMeetingAction for title display toggle
- Rename 'Exclude All-Day Events' label to 'All-Day Events'

--- a/pi/setup.html
+++ b/pi/setup.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="sdpi-item" type="checkbox">
-            <div class="sdpi-item-label">Exclude All-Day Events</div>
+            <div class="sdpi-item-label">All-Day Events</div>
             <div class="sdpi-item-value">
                 <input type="checkbox" id="excludeAllDay" checked>
                 <label for="excludeAllDay"><span></span>Hide all-day events</label>
