feat: control debug mode with STREAMDECK_DEBUG env variable
- Debug mode is now controlled ONLY by STREAMDECK_DEBUG env variable
- In non-debug mode: log level is INFO (no DEBUG/TRACE spam)
- In debug mode: log level is TRACE (full logging)
- Debug panel in Property Inspector is hidden unless debug mode is on
- Remove NODE_ENV dependency from isDebugMode() check

Build with STREAMDECK_DEBUG=1 for debug mode, or omit/set to 0 for production.

--- a/pi/setup.html
+++ b/pi/setup.html
@@ -94,7 +94,7 @@
         </div>
 
         <!-- Debug Panel (only shown in dev mode) -->
-        <div id="debug-panel" style="display: block;">
+        <div id="debug-panel" style="display: none;">
             <div class="sdpi-heading">Debug Information</div>
             <div class="content">
                 <p id="debug-status" style="color: #888;">Requesting debug info from plugin...</p>
