feat: change flashOnMeetingStart default to false
- New installations will have flash disabled by default
- Users can opt-in via settings if desired
- Updated PI checkbox to be unchecked by default
- Updated default value handling in setup.js

--- a/pi/setup.html
+++ b/pi/setup.html
@@ -50,7 +50,7 @@
         <div class="sdpi-item" type="checkbox">
             <div class="sdpi-item-label">Meeting Alert</div>
             <div class="sdpi-item-value">
-                <input type="checkbox" id="flashOnMeetingStart" checked>
+                <input type="checkbox" id="flashOnMeetingStart">
                 <label for="flashOnMeetingStart"><span></span>Flash when meeting starts</label>
             </div>
         </div>
