--- a/pi/pi.html
+++ b/pi/pi.html
@@ -7,23 +7,49 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>iCal Property Inspector</title>
     <link rel="stylesheet" href="css/sdpi.css">
+    <style>
+        .calendar-info {
+            font-size: 11px;
+            color: #888;
+            margin-top: 4px;
+        }
+        .no-calendars-warning {
+            color: #f44336;
+            font-size: 11px;
+            margin-top: 4px;
+        }
+    </style>
 </head>
 <body>
     <div class="sdpi-wrapper">
+        <!-- Calendar Selection -->
         <div class="sdpi-item">
-            <div class="sdpi-item-label">iCal URL</div>
-            <input id="url" class="next-to-settings sdpi-item-value" type="text" value="" readonly />
-            <button class="settings" id="settings" value="Settings"><span>Settings</span></button>
+            <div class="sdpi-item-label">Calendar</div>
+            <select id="calendarSelect" class="sdpi-item-value select">
+                <option value="">Default Calendar</option>
+                <!-- Populated dynamically from global settings -->
+            </select>
+        </div>
+        
+        <div class="sdpi-item" id="calendarInfoContainer">
+            <div class="sdpi-item-label"></div>
+            <div class="sdpi-item-value calendar-info" id="calendarInfo">
+                Select a calendar for this button
+            </div>
+        </div>
+        
+        <div class="sdpi-item" id="noCalendarsContainer" style="display: none;">
+            <div class="sdpi-item-label"></div>
+            <div class="sdpi-item-value no-calendars-warning">
+                No calendars configured. Click Settings to add calendars.
+            </div>
         </div>
 
+        <hr class="sdpi-separator" style="margin: 10px 0; border-color: #3a3a3a;" />
+
         <div class="sdpi-item">
-            <div class="sdpi-item-label">Time Window</div>
-            <select id="timeWindow" class="sdpi-item-value select">
-                <option value="1">1 Day</option>
-                <option value="3" selected>3 Days</option>
-                <option value="5">5 Days</option>
-                <option value="7">7 Days</option>
-            </select>
+            <div class="sdpi-item-label">Settings</div>
+            <button class="sdpi-item-value" id="settings">⚙️ Manage Calendars & Settings</button>
         </div>
 
         <div class="sdpi-item" id="statusContainer" style="display: none;">
